--- a/go_brasil_ranking/src/ui/styles/index.scss
+++ b/go_brasil_ranking/src/ui/styles/index.scss
@@ -3,6 +3,7 @@
 @use "components/navbar";
 @use "components/footer";
 @use "components/game_records_table";
+@use "components/game_events_table";
 @use "components/players_table";
 
 @use "views/about_view";
