--- a/go_brasil_ranking/src/ui/styles/index.scss
+++ b/go_brasil_ranking/src/ui/styles/index.scss
@@ -10,4 +10,6 @@
 @use "views/home_view";
 @use "views/player_view";
 @use "views/players_view";
+
 @use "views/admin_view";
+@use "views/new_player_view";
