--- a/go_brasil_ranking/src/ui/styles/views/new_player_view.scss
+++ b/go_brasil_ranking/src/ui/styles/views/new_player_view.scss
@@ -27,10 +27,14 @@ new-player-view {
       select {
         font-size: 1.2rem;
       }
-      
-    //   select {
-    //     margin-top: 20px;
-    //   }
+    }
+  }
+
+  h4 {
+    margin-top: 40px;
+
+    route-link {
+      color: darken(green, 10%);
     }
   }
 }
