--- a/go_brasil_ranking/public/index.css
+++ b/go_brasil_ranking/public/index.css
@@ -257,29 +257,18 @@ player-view h2 {
   margin-bottom: 30px;
 }
 
-admin-view {
+admin-view[signed-in=false] form {
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-row-gap: 25px;
   font-size: 1.15rem;
+  margin-top: 150px;
 }
-admin-view button {
+admin-view[signed-in=false] form button {
   width: max-content;
   margin-top: 10px;
   padding: 2px 7.5px;
   font-size: 1.1rem;
-}
-admin-view[signed-in=false] {
-  display: grid;
-  grid-template-columns: 1fr;
-  grid-template-rows: 250px 200px;
-  grid-template-areas: "form" "submit";
-  margin-top: 150px;
-}
-admin-view[signed-in=false] form {
-  display: grid;
-  grid-template-columns: 1fr;
-  grid-template-rows: 1fr 1fr;
-  grid-row-gap: 25px;
-  grid-area: form;
-  grid-template-areas: "username" "password";
 }
 admin-view[signed-in=false] form fieldset {
   display: grid;
@@ -291,7 +280,8 @@ admin-view[signed-in=false] form fieldset label {
   height: 10px;
   padding-left: 1px;
 }
-admin-view[signed-in=false] form fieldset input {
+admin-view[signed-in=false] form fieldset input,
+admin-view[signed-in=false] form fieldset select {
   height: 30px;
   padding-left: 7.5px;
   font-size: 1.1rem;
@@ -301,6 +291,12 @@ admin-view[signed-in=true] {
   grid-template-columns: 1fr;
   grid-template-rows: max-content max-content max-content;
   grid-template-areas: "msg" "sign-out-button" "add-new-links";
+}
+admin-view[signed-in=true] button {
+  width: max-content;
+  margin-top: 10px;
+  padding: 2px 7.5px;
+  font-size: 1.1rem;
 }
 admin-view[signed-in=true] p {
   margin-top: 40px;
@@ -324,14 +320,14 @@ admin-view[signed-in=true] #add-new ul route-link {
 new-player-view form {
   display: grid;
   grid-template-columns: 1fr;
-  grid-template-rows: max-content max-content max-content max-content;
-  grid-row-gap: 20px;
-  grid-template-areas: "name" "countries" "elo" "submit";
+  grid-row-gap: 25px;
+  font-size: 1.15rem;
+  margin-top: 150px;
 }
 new-player-view form button {
   width: max-content;
+  margin-top: 10px;
   padding: 2px 7.5px;
-  margin-top: 20px;
   font-size: 1.1rem;
 }
 new-player-view form fieldset {
@@ -340,16 +336,51 @@ new-player-view form fieldset {
   grid-template-rows: 1fr 1fr;
   border: 0;
 }
-new-player-view form fieldset label,
+new-player-view form fieldset label {
+  height: 10px;
+  padding-left: 1px;
+}
 new-player-view form fieldset input,
 new-player-view form fieldset select {
-  font-size: 1.2rem;
+  height: 30px;
+  padding-left: 7.5px;
+  font-size: 1.1rem;
 }
 new-player-view h4 {
   margin-top: 40px;
 }
 new-player-view h4 route-link {
   color: #004d00;
+}
+
+new-game-event-view form {
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-row-gap: 25px;
+  font-size: 1.15rem;
+  margin-top: 150px;
+}
+new-game-event-view form button {
+  width: max-content;
+  margin-top: 10px;
+  padding: 2px 7.5px;
+  font-size: 1.1rem;
+}
+new-game-event-view form fieldset {
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-rows: 1fr 1fr;
+  border: 0;
+}
+new-game-event-view form fieldset label {
+  height: 10px;
+  padding-left: 1px;
+}
+new-game-event-view form fieldset input,
+new-game-event-view form fieldset select {
+  height: 30px;
+  padding-left: 7.5px;
+  font-size: 1.1rem;
 }
 
 /*# sourceMappingURL=index.css.map */
