--- a/go_brasil_ranking/src/ui/styles/views/new_player_view.scss
+++ b/go_brasil_ranking/src/ui/styles/views/new_player_view.scss
@@ -3,6 +3,16 @@
 new-player-view {
   @include av.form;
 
+  fieldset {
+    &#countries {
+      div#countries-select {
+        display: grid;
+        grid-template-columns: 1fr;
+        grid-row-gap: 10px;
+      }
+    }
+  }
+
   h4 {
     margin-top: 40px;
 
