--- a/go_brasil_ranking/public/index.css
+++ b/go_brasil_ranking/public/index.css
@@ -316,6 +316,12 @@ admin-view[signed-in=true] button {
   border-radius: 0.3rem;
   border: 1px solid gray;
 }
+admin-view[signed-in=true] div#return-msg {
+  margin-top: 30px;
+}
+admin-view[signed-in=true] div#return-msg route-link {
+  color: #004d00;
+}
 admin-view[signed-in=true] p {
   margin-top: 40px;
 }
@@ -380,16 +386,16 @@ new-player-view form fieldset select {
   padding-left: 5px;
   padding-right: 5px;
 }
+new-player-view div#return-msg {
+  margin-top: 30px;
+}
+new-player-view div#return-msg route-link {
+  color: #004d00;
+}
 new-player-view fieldset#countries div#countries-select {
   display: grid;
   grid-template-columns: 1fr;
   grid-row-gap: 10px;
-}
-new-player-view h4 {
-  margin-top: 40px;
-}
-new-player-view h4 route-link {
-  color: #004d00;
 }
 
 new-game-event-view form {
