--- a/go_brasil_ranking/src/ui/styles/views/admin_view.scss
+++ b/go_brasil_ranking/src/ui/styles/views/admin_view.scss
@@ -85,6 +85,14 @@
   }
 }
 
+@mixin formReturnMsg {
+  div#return-msg {
+    margin-top: 30px;
+
+    @include routeLinkDecoration;
+  }
+}
+
 admin-view {
   &[signed-in="false"] {
     @include form;
@@ -97,6 +105,7 @@ admin-view {
     grid-template-areas: "msg" "sign-out-button" "add-new-links";
 
     @include formButton;
+    @include formReturnMsg;
 
     p {
       margin-top: 40px;
