--- a/go_brasil_ranking/src/ui/styles/views/admin_view.scss
+++ b/go_brasil_ranking/src/ui/styles/views/admin_view.scss
@@ -42,6 +42,11 @@
   input {
     padding-left: 10px;
     padding-right: 10px;
+    
+    &[type="file"] {
+      border: 0;
+      padding-left: 1px;
+    }
   }
 
   select {
