--- a/go_brasil_ranking/public/index.css
+++ b/go_brasil_ranking/public/index.css
@@ -190,8 +190,8 @@ players-table .player-card > route-link {
   margin-bottom: 10px;
   align-items: center;
   display: grid;
-  grid-template-columns: 30px minmax(100px, 200px) minmax(60px, max-content) 60px 45px;
-  grid-template-areas: "ref player-name countries elo dan-kyu";
+  grid-template-columns: 30px minmax(100px, 200px) minmax(60px, max-content) 60px 45px 100px;
+  grid-template-areas: "ref player-name countries elo dan-kyu last-game-date";
 }
 players-table .player-card > route-link:hover {
   box-shadow: rgba(0, 0, 0, 0.22) 0px 19px 43px;
@@ -216,15 +216,22 @@ players-table .player-card > route-link .countries {
   text-align: center;
   margin-left: -29px;
 }
+players-table .player-card > route-link .centered {
+  text-align: center;
+}
 players-table .players-table-legend {
   display: grid;
-  grid-template-columns: 30px minmax(100px, 200px) minmax(60px, max-content) 60px 45px;
-  grid-template-areas: "ref player-name countries elo dan-kyu";
+  grid-template-columns: 30px minmax(100px, 200px) minmax(60px, max-content) 60px 45px 100px;
+  grid-template-areas: "ref player-name countries elo dan-kyu last-game-date";
   padding: 12px 0px;
   padding-left: 17px;
   padding-right: 12px;
   align-items: center;
   font-weight: bold;
+}
+players-table .players-table-legend .centered {
+  text-align: center;
+  margin-left: 8px;
 }
 
 about-view h1 {
